fix bg overflow bug

--- a/final/style.css
+++ b/final/style.css
@@ -52,7 +52,7 @@
 }
 
 body {
-	background-color: #1a2a2a;
+	background-color: black;
 	color: white;
 	overflow-x: hidden;
 	overflow-y: scroll;
@@ -66,11 +66,14 @@ main {
 }
 
 .bg-texture {
-	position: absolute;
 	inset: 0;
 	background: url('./background-image.webp') no-repeat center/cover;
 	opacity: 1;
 	z-index: -1;
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	background-attachment: fixed;
 }
 
 /* =============================
@@ -180,7 +183,7 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 18rem 1rem 2rem 1rem;
+	padding: 18rem 1rem 3rem 1rem;
 	text-align: center;
 	width: 100%;
 	max-width: 800px;
